--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "build-prod": "webpack --node-env=production",
     "clear": "rd /s /q dist"
   },
-
   "devDependencies": {
     "@babel/core": "^7.24.6",
     "@babel/preset-env": "^7.24.6",
@@ -40,6 +39,7 @@
     "prettier": "3.2.5",
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
+    "swiper": "^11.1.4",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
